<resources>
    <string name="app_name">AI Quran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quran App</string>
    <string name="bismiAllah">بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="nav_header_subtitle">laibanoorali803@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">AI Quran</string>
    <string name="menu_gallery">Parah Names</string>
    <string name="menu_slideshow">Surah Introduction</string>
    <string name="translation_by_fateh_muhammad_jalandhri">Translation by Fateh Muhammad Jalandhri</string>
    <string name="surah_names_in_urdu">Surah Names In Urdu</string>
    <string name="surah_names_in_english">Surah Names In English</string>
    <string name="translation_by_mehmood_ul_hassan">Translation by Mehmood ul Hassan</string>
    <string name="surah_names_in_urdu2">Surah Names In Urdu</string>
    <string name="surah_names_in_english2">Surah Names In English</string>
    <string name="open">Openning</string>
    <string name="close">Closing</string>
</resources>