<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="Home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item android:title="@string/translation_by_fateh_muhammad_jalandhri">
        <menu>
            <item
                android:id="@+id/nav_FUrdu"
                android:icon="@drawable/quranicon"
                android:title="@string/surah_names_in_urdu" />
            <item
                android:id="@+id/nav_FEng"
                android:icon="@drawable/quranicon"
                android:title="@string/surah_names_in_english" />
        </menu>
    </item>
    <item android:title="@string/translation_by_mehmood_ul_hassan">
        <menu>
            <item
                android:id="@+id/nav_MUrdu"
                android:icon="@drawable/quranicon"
                android:title="@string/surah_names_in_urdu2" />
            <item
                android:id="@+id/nav_MEng"
                android:icon="@drawable/quranicon"
                android:title="@string/surah_names_in_english2" />
        </menu>
    </item>
</menu>